# rv32emu

./: .gitignore  README.md  dune-project  rv32emu.opam
lib/: bits.ml  bits.mli  dune  memory.ml  memory.mli  registers.ml  registers.mli  rv32emu.ml  types.ml  types.mli
test/: dune  test_bits.ml  test_memory.ml  test_registers.ml
